objects/CaseApprovalMatrix__mdt.object
<CustomObject>
    <fields>
        <fullName>ApproverRole__c</fullName>
        <label>ApproverRole</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Receivable Admin</fullName>
                </value>
                <value>
                    <fullName>Administration Manager</fullName>
                </value>
                <value>
                    <fullName>Asset General Manager</fullName>
                </value>
                <value>
                    <fullName>Centre Manager</fullName>
                </value>
                <value>
                    <fullName>Chief Operating Officer</fullName>
                </value>
                <value>
                    <fullName>Commercial Leasing Admin</fullName>
                </value>
                <value>
                    <fullName>Commercial Leasing General Manager</fullName>
                </value>
                <value>
                    <fullName>Commercial Leasing Regional Manager</fullName>
                </value>
                <value>
                    <fullName>Commercial Property Manager</fullName>
                </value>
                <value>
                    <fullName>Commercial Retail Manager</fullName>
                </value>
                <value>
                    <fullName>Corporate Legal</fullName>
                </value>
                <value>
                    <fullName>Development Executive</fullName>
                </value>
                <value>
                    <fullName>Development Finance Manager</fullName>
                </value>
                <value>
                    <fullName>Director LARS &amp; NZ Development</fullName>
                </value>
                <value>
                    <fullName>Fitout Contributions Admin</fullName>
                </value>
                <value>
                    <fullName>General Manager Leasing</fullName>
                </value>
                <value>
                    <fullName>General Manager Retail Design</fullName>
                </value>
                <value>
                    <fullName>GM of Corporate Accounting</fullName>
                </value>
                <value>
                    <fullName>GM Retail Admin &amp; Delivery</fullName>
                </value>
                <value>
                    <fullName>Group General Manager - LARS</fullName>
                </value>
                <value>
                    <fullName>Leasing Executive</fullName>
                </value>
                <value>
                    <fullName>Leasing Finance Analyst</fullName>
                </value>
                <value>
                    <fullName>Regional Manager - LARS</fullName>
                </value>
                <value>
                    <fullName>Regional Manager Retail Design</fullName>
                </value>
                <value>
                    <fullName>Regional Mgr Retail Admin</fullName>
                </value>
                <value>
                    <fullName>Regional Mgr Retail Delivery</fullName>
                </value>
                <value>
                    <fullName>Reg Retailer Account Admin</fullName>
                </value>
                <value>
                    <fullName>Retail Admin Assistant</fullName>
                </value>
                <value>
                    <fullName>Retail Administrator</fullName>
                </value>
                <value>
                    <fullName>Retail Delivery Coordinator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieldAPIName__c</fullName>
        <label>Field API Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TechFinance__c</fullName>
                    <default>true</default>
                    <label>TechFinance__c</label>
                </value>
                <value>
                    <fullName>TechGMLeasing__c</fullName>
                </value>
                <value>
                    <fullName>TechNSOTeamCoordinator__c</fullName>
                </value>
                <value>
                    <fullName>TechRegionalLeasingManager__c</fullName>
                </value>
                <value>
                    <fullName>TechRegionalManager__c</fullName>
                </value>
                <value>
                    <fullName>TechRegionalManagerRetailAdmin__c</fullName>
                </value>
                <value>
                    <fullName>TechRevenueAssurance__c</fullName>
                </value>
                <value>
                    <fullName>TechCRM__c</fullName>
                </value>
                <value>
                    <fullName>TechLeasingExecutive__c</fullName>
                </value>
                <value>
                    <fullName>TechLeasingFinanceAnalyst__c</fullName>
                </value>
                <value>
                    <fullName>TechDirectorOfLeasing__c</fullName>
                </value>
                <value>
                    <fullName>TechCentreManager__c</fullName>
                </value>
                <value>
                    <fullName>TechRetailAdmin__c</fullName>
                </value>
                <value>
                    <fullName>TechRetailManager__c</fullName>
                </value>
                <value>
                    <fullName>TechDevelopmentExecutive__c</fullName>
                </value>
                <value>
                    <fullName>TechDirectorLARSNZDevelopment__c</fullName>
                </value>
                <value>
                    <fullName>TechCommercialPropertyManager__c</fullName>
                </value>
                <value>
                    <fullName>TechRegRetailerAccountAdmin__c</fullName>
                </value>
                <value>
                    <fullName>TechGMRetailAdmin__c</fullName>
                </value>
                <value>
                    <fullName>TechGGManager__c</fullName>
                </value>
                <value>
                    <fullName>TechDevelopmentFinanceManager__c</fullName>
                </value>
                <value>
                    <fullName>TechRevenueAdministrator__c</fullName>
                </value>
                <value>
                    <fullName>TechRetailAdminAssistant__c</fullName>
                </value>
                <value>
                    <fullName>TechRAS__c</fullName>
                </value>
                <value>
                    <fullName>TechAdminManager__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LVI - Request For Refund</fullName>
                    <default>true</default>
                    <label>LVI - Request For Refund</label>
                </value>
                <value>
                    <fullName>LVI - Voluntary Work Approval</fullName>
                </value>
                <value>
                    <fullName>LVI - Issue Credit Note</fullName>
                </value>
                <value>
                    <fullName>LVI - Retail Admin Lease Variations</fullName>
                </value>
                <value>
                    <fullName>LVI - Lease Area Variation</fullName>
                </value>
                <value>
                    <fullName>LVI - Merchant Or Promotional Allowance</fullName>
                </value>
                <value>
                    <fullName>LVI - Conduct Market Review</fullName>
                </value>
                <value>
                    <fullName>LVI - Variance to Rent Commencement Date</fullName>
                </value>
                <value>
                    <fullName>LVI - Trading Name Change</fullName>
                </value>
                <value>
                    <fullName>LVI - Surrender a Lease</fullName>
                </value>
                <value>
                    <fullName>LVI - Terminate a Lease</fullName>
                </value>
                <value>
                    <fullName>LVI - Assignment of a Lease</fullName>
                </value>
                <value>
                    <fullName>LVI - Manage Bank Guarantee</fullName>
                </value>
                <value>
                    <fullName>LVI - Centre Team</fullName>
                </value>
                <value>
                    <fullName>LVI - Leasing Finance</fullName>
                </value>
                <value>
                    <fullName>Ancillary Tax Invoice Request</fullName>
                </value>
                <value>
                    <fullName>LVI - Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Leasing Checksheet</fullName>
                </value>
                <value>
                    <fullName>LV02 - Variation of Specialty Lease</fullName>
                </value>
                <value>
                    <fullName>LVI - Variation of Specialty Leases</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case Approval Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>Type__c</columns>
        <columns>ApproverRole__c</columns>
        <columns>FieldAPIName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Case Approval Matrices</pluralLabel>
</CustomObject>